Tue Oct  7 21:47:05 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_param.c: refactoring.

Tue Oct  7 21:40:17 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_method.c: refactoring. add
	  olemethod_data_get_struct to wrap Data_Get_Struct.
	* ext/win32ole/win32ole_method.h: ditto.
	
	* ext/win32ole/win32ole_param.c (oleparam_ole_param):
	  call olemethod_data_get_struct instead of Data_Get_Struct.

Tue Oct  7 11:17:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_systmpdir): try user temporary directory by
	  confstr() on Mac OS X.
	  c.f. http://www.opensource.apple.com/source/ruby/ruby-104/patches/ext_etc_etc.c.diff

Tue Oct  7 10:48:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (struct stat.st_size): prefer off_t over int, long,
	  and so on.  inspired by
	  http://www.opensource.apple.com/source/ruby/ruby-104/patches/config.h.ed

Tue Oct  7 10:37:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_UNIVERSAL_ARCH): fix missing quoting
	  brackets.  incorporated from
	  http://www.opensource.apple.com/source/ruby/ruby-104/patches/configure.diff

Mon Oct  6 23:34:42 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_param.c: use typed data.

Mon Oct  6 22:37:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.h (struct RSymbol): move from internal.h.

Mon Oct  6 21:43:03 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c: update exception tree. [DOC]
	  reported by @hemge via twitter.

Mon Oct  6 18:43:03 2014  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: Fix typo. [Bug #9914]

Mon Oct  6 16:23:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (rb_f_kill): should not ignore signal unless the
	  default handler is registered.  [ruby-dev:48592] [Bug #9820]

Mon Oct  6 16:07:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_string.rb (test_LSHIFT_neary_long_max): enable